--- a/Soulgram.File.Manager/Soulgram.File.Manager.csproj
+++ b/Soulgram.File.Manager/Soulgram.File.Manager.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Description>Package to upload files into Azure Blob Storage</Description>
     </PropertyGroup>
 
     <ItemGroup>
