--- a/Soulgram.File.Manager/Soulgram.File.Manager.csproj
+++ b/Soulgram.File.Manager/Soulgram.File.Manager.csproj
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Description>Package to upload files into Azure Blob Storage</Description>
+        <PackageVersion>1.0.1</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
